fix horizontal scrolling issue

--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,6 @@ h2 {
 
 .queue li {
   padding: 30px 20px;
-  margin-right: -20px;
-  margin-left: -20px;
   border-left: 0px;
   border-right: 0px;
 }
